exports[`test should render a ProgressBar component with default heightSize 50% fill and custom props and style 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="terra-ProgressBar terra-ProgressBar--small"
  color="#007cc3"
  dir="rtl"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={50} />
`;

exports[`test should render a ProgressBar component with large heightSize and 60% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={60}
  className="terra-ProgressBar terra-ProgressBar--large"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={60} />
`;

exports[`test should render a ProgressBar component with tiny heightSize and 15% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={15}
  className="terra-ProgressBar terra-ProgressBar--tiny"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={15} />
`;

exports[`test should render a default component 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="terra-ProgressBar terra-ProgressBar--small"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={0} />
`;
